--- a/functions/package.json
+++ b/functions/package.json
@@ -14,13 +14,19 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@google-cloud/storage": "^5.8.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "firebase-admin": "^9.2.0",
-    "firebase-functions": "^3.11.0",
-    "fnm": "0.0.0"
+    "firebase-admin": "^9.5.0",
+    "firebase-functions": "^3.13.2",
+    "fnm": "0.0.0",
+    "fs-extra": "^9.1.0",
+    "sharp": "^0.27.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
+    "@types/fs-extra": "^9.0.7",
+    "@types/sharp": "^0.27.1",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.8.0",
     "eslint": "^7.6.0",
