Added some extra notes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,24 +1,24 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#8eefa1",
-    "activityBar.activeBorder": "#8b73eb",
-    "activityBar.background": "#8eefa1",
+    "activityBar.activeBackground": "#e8b1fc",
+    "activityBar.activeBorder": "#997206",
+    "activityBar.background": "#e8b1fc",
     "activityBar.foreground": "#15202b",
     "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#8b73eb",
-    "activityBarBadge.foreground": "#15202b",
-    "editorGroup.border": "#8eefa1",
-    "panel.border": "#8eefa1",
-    "sideBar.border": "#8eefa1",
-    "statusBar.background": "#62e87c",
-    "statusBar.border": "#62e87c",
+    "activityBarBadge.background": "#997206",
+    "activityBarBadge.foreground": "#e7e7e7",
+    "editorGroup.border": "#e8b1fc",
+    "panel.border": "#e8b1fc",
+    "sideBar.border": "#e8b1fc",
+    "statusBar.background": "#d980fa",
+    "statusBar.border": "#d980fa",
     "statusBar.foreground": "#15202b",
-    "statusBarItem.hoverBackground": "#35e157",
-    "titleBar.activeBackground": "#62e87c",
+    "statusBarItem.hoverBackground": "#ca4ff8",
+    "titleBar.activeBackground": "#d980fa",
     "titleBar.activeForeground": "#15202b",
-    "titleBar.border": "#62e87c",
-    "titleBar.inactiveBackground": "#62e87c99",
+    "titleBar.border": "#d980fa",
+    "titleBar.inactiveBackground": "#d980fa99",
     "titleBar.inactiveForeground": "#15202b99"
   },
-  "peacock.color": "#62e87c"
+  "peacock.color": "#D980FA"
 }
