--- a/functions/package.json
+++ b/functions/package.json
@@ -21,7 +21,8 @@
     "firebase-functions": "^3.13.2",
     "fnm": "0.0.0",
     "fs-extra": "^9.1.0",
-    "sharp": "^0.27.2"
+    "sharp": "^0.27.2",
+    "twilio": "^3.57.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
